--- a/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
@@ -29,9 +29,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
   
   
     <div>
-        <form class="form-horizontal" th:object="${beneficio}" th:action="@{../beneficio}" method="post">
-            <input type="hidden" th:field="*{codigobeneficio}"/>
-           
+        <!--th:action="@{../beneficio}"-->
+        <form class="form-horizontal" id="asignar" th:object="${beneficio}"   method="post">
+            <!--<input type="hidden" th:field="*{codigobeneficio}" id="codben"/>-->
+           <!--<span th:object="${empleado}">--> 
+             <input type="hidden" id="codem"  />
+          <!--</span>-->
             
 <!--            <div class="form-group">
                 <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
@@ -39,39 +42,25 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <input type="text" class="form-control" th:field="*{codigobeneficio}"/>
                 </div>
             </div>-->
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de Beneficio:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" required="true" size="30" maxlength="30" th:field="*{nombrebeneficio}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Descripción Beneficio:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" size="100" maxlength="100" required="true" th:field="*{descripcionbeneficio}"/>
-                </div>
-            </div>
-<div class="form-group">
-                <label class="col-sm-2 control-label">Fecha de inicio:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control"  required="true" th:field="*{fechainiciobeneficio}"/>
-                </div>
-            </div>
-
-<div class="form-group">
-                <label class="col-sm-2 control-label">Fecha de Finalización:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" required="true" th:field="*{fechafinalizarbeneficio}"/>
-                </div>
-            </div>
+              <div class="form-group">
+                        <label class="col-sm-5 control-label">Beneficios:</label>
+                        <div class="col-sm-7" >
+                            <select class="form-control"  th:field="*{codigobeneficio}" >
+                                <option th:each="c:${beneficios}" th:value="${c.codigobeneficio}" th:text="${c.nombrebeneficio}"></option>
+                            </select>
+                        </div>
+                    </div>
             
 
-<div class="col-md-12">
+
+            
+
+                <div class="col-md-12">
                         <div class="row" align="center">
                           
-                            <button type="button" class="btn btn-info"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
-                            <button type="submit" class="btn btn-primary">Guardar</button>
-                            <button type="reset" class="btn btn-default">Limpiar</button>
+                            <button type="button" class="btn btn-info"><a href="#" th:href="@{/empleados/}">Regresar</a></button>
+                            <button type="submit" class="btn btn-primary" id="Asignarbtn"  >Asignar</button>
+                            <!--<button type="reset" class="btn btn-default">Limpiar</button>-->
                         </div>
                     </div>
 
@@ -95,7 +84,30 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         });
        
     });
+    
+    $('#Asignarbtn').click(function(){
+            $("#asignar").attr('action', '../beneficio/asignar/'+ $("#codem").val().toString());
+            $("form#asignar").submit();
+            
+        });
+        
+
+    
 </script>
+
+        <script>       
+            var URLactual = window.location.href;
+                if (URLactual.includes("edit")){
+//                    alert("str");
+                }
+                else{
+//                    alert("str1");
+var str =URLactual.substring(URLactual.indexOf("asignar")+8,URLactual.length);
+//alert(str);
+$(function () {
+          document.getElementById("codem").value = str;
+      });}
+	</script>
 
 </body>
 <script th:inline="javascript">
