--- a/src/main/resources/templates/fragments/caparecibidas/caprecibidasform.html
+++ b/src/main/resources/templates/fragments/caparecibidas/caprecibidasform.html
@@ -40,82 +40,93 @@
 }
  </style>
      
-    <title>SISADMRH-Crear Empleado</title>
+    <title>SISADMRH-Crear Capacitaciones Recibidas</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
+    <div class="contenedorizq"><label  >pnt_cem5</label>  
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-    <h3 align="center">Crear Contacto</h3>
+            <div class="row text-center">
+                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
+            </div>
+    <h3 align="center">Crear Capacitaciones Recibidas</h3>
     
 
-    <div id="menu1" class="tab-pane fade">
+    
         <br>
-      <form class="form-horizontal" th:object="${contacto}" th:action="@{../contacto}" method="post">
-          <input type="hidden" th:field="*{codigocontacto}"/>
-            <input type="hidden" th:field="*{nombrecontacto}"/>
+ <form class="form-horizontal" th:object="${caparecibida}" th:action="@{../caparecibida}" method="post">
+          <input type="hidden" th:field="*{codigocaparecibidas}"/>
             <div class="col-md-12"  align="center">
                  <div class="form-group">
-                    <label class="col-sm-3 control-label">Nombre(*):</label>
+                    <label class="col-sm-3 control-label">Tipo de Evento(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{nombrecontacto}"  />
-                    </div>
-                    </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Apellido(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{apellidocontacto}"   />
+                        <input type="text" class="form-control" size="50" maxlength="50" required="true"  th:field="*{tipoevento}"  />
                     </div>
                 </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Direccion(*):</label>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Especialidad del Evento(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{direccion}"  />
+                        <input type="text" class="form-control" size="50" maxlength="50" required="true"   th:field="*{especialidad}" />
                     </div>
                 </div>
-                     <div class="form-group">
-                <label class="col-sm-3 control-label">Sexo(*):</label>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Organismo Patrocinador(*):</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control"  size="200" maxlength="200" required="true"   th:field="*{organismo}"   />
+                    </div>
+                </div>
+                   <div class="form-group">
+                <label class="col-sm-3 control-label">Pais(*):</label>
                 <div class="col-sm-5">
-                    <select class="form-control" name="sexocontanto"  >
-                            <!--th:field="*{sexocontacto}" >-->
-                        <option>Femenino</option>
-                        <option>Masculino</option>
+                    <select class="form-control" name="pais" >
+                            <!--th:field="*{pais}"  >-->
+                        <option>El Salvador</option>
+                        <option>Estado Unidos</option>
+                         <option>Mexico</option>
                     </select>
                 </div>
+                
             </div>
                  <div class="form-group">
-                    <label class="col-sm-3 control-label">Telefono Fijo(*):</label>
+                <label class="col-sm-3 control-label">Fecha del Evento(*):</label>
+                <div class="col-sm-5">
+                     <input class="form-control" type="text" required="true"  name="fechacapreevento" id="fechacapreevento"  th:field="*{fechaevento}" />
+                </div>
+            </div>
+                   <div class="form-group">
+                    <label class="col-sm-3 control-label">Duracion Horas(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"    th:field="*{telefonofijocontacto}" />
-                    </div>
-                    </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Telefono Movil(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"    th:field="*{telefonomovilcontacto}"  />
+                        <input type="text" class="form-control numeros"  required="true"   th:field="*{dhoras}" />
                     </div>
                 </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Correo Electronico(*):</label>
+                   <div class="form-group">
+                    <label class="col-sm-3 control-label">Duracion Dias(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{emailcontacto}"    />
+                        <input type="text" class="form-control numeros"   required="true" th:field="*{ddias}"  />
                     </div>
                 </div>
-                </div>
-          <div class="col-md-12">
+          </div>
+           <div class="col-md-12">
             <div class="row" align="center">
                 <button type="button" class="btn btn-default"><a href="#" th:href="@{/empleado/}">Regresar</a></button>
                 <button type="submit" class="btn btn-default">Guardar</button>
                 <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
     </div>
-      </form>
+                </form>
         
-      </div>
+      
   
 
                </div>
@@ -128,6 +139,30 @@
         
        
 </body>
+        
+        <script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comites/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
 <script src="../static/css/hydro/js/jquery.js"></script>
 	        
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -221,6 +256,7 @@
 		    });
 		});
 	</script>
+
         
         
 </html>
