--- a/src/main/resources/templates/fragments/contacto/contactoform.html
+++ b/src/main/resources/templates/fragments/contacto/contactoform.html
@@ -40,41 +40,55 @@
 }
  </style>
      
-    <title>SISADMRH-Crear Empleado</title>
+    <title>SISADMRH-Crear Contacto</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
+    <div class="contenedorizq"><label  >pnt_ce13</label>  
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
+            <div class="row text-center">
+                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/contactos.jpg}"/>
+            </div>
     <h3 align="center">Crear Contacto</h3>
     
 
-    <div id="menu1" class="tab-pane fade">
+    
         <br>
-      <form class="form-horizontal" th:object="${contacto}" th:action="@{../contacto}" method="post">
-          <input type="hidden" th:field="*{codigocontacto}"/>
+      <form class="form-horizontal" id="formcontacto" th:object="${contacto}" th:action="@{../contacto}" method="post">
+<!--          <span th:object="${empleadoContacto}"> 
+             <input type="text" th:field="*{codigoempleado}"/>
+          </span>-->
+            <input type="hidden" th:field="*{codigocontacto}"/>
             <input type="hidden" th:field="*{nombrecontacto}"/>
+            <input type="hidden" id="codem"  />
             <div class="col-md-12"  align="center">
                  <div class="form-group">
                     <label class="col-sm-3 control-label">Nombre(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{nombrecontacto}"  />
+                        <input type="text" class="form-control"   required="true" size="50" maxlength="50" th:field="*{nombrecontacto}"  />
                     </div>
                     </div>
                       <div class="form-group">
                     <label class="col-sm-3 control-label">Apellido(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{apellidocontacto}"   />
+                        <input type="text" class="form-control"  required="true" size="50" maxlength="50" th:field="*{apellidocontacto}"   />
                     </div>
                 </div>
                       <div class="form-group">
                     <label class="col-sm-3 control-label">Direccion(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{direccion}"  />
+                        <input type="text" class="form-control"  required="true" size="100" maxlength="100" th:field="*{direccion}"  />
                     </div>
                 </div>
                      <div class="form-group">
@@ -90,32 +104,33 @@
                  <div class="form-group">
                     <label class="col-sm-3 control-label">Telefono Fijo(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"    th:field="*{telefonofijocontacto}" />
+                        <input type="text" class="form-control num_telefono" required="true"    th:field="*{telefonofijocontacto}" />
                     </div>
                     </div>
                       <div class="form-group">
                     <label class="col-sm-3 control-label">Telefono Movil(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"    th:field="*{telefonomovilcontacto}"  />
+                        <input type="text" class="form-control num_telefono" required="true"    th:field="*{telefonomovilcontacto}"  />
                     </div>
                 </div>
                       <div class="form-group">
                     <label class="col-sm-3 control-label">Correo Electronico(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{emailcontacto}"    />
+                        <input type="email" class="form-control" required="true"   th:field="*{emailcontacto}"    />
                     </div>
                 </div>
                 </div>
           <div class="col-md-12">
             <div class="row" align="center">
                 <button type="button" class="btn btn-default"><a href="#" th:href="@{/empleado/}">Regresar</a></button>
-                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="submit" class="btn btn-default" id="btnGuardar">Guardar</button>
                 <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
     </div>
+            <!--</span>-->
       </form>
         
-      </div>
+      
   
 
                </div>
@@ -220,7 +235,48 @@
 		        dateFormat: 'yy-mm-dd'
 		    });
 		});
+                
+                $('#btnGuardar').click(function(){
+            $("#formcontacto").attr('action', '../contacto/'+ $("#codem").val().toString());
+            $("form#formcontacto").submit();
+            
+        });
 	</script>
-        
+        <script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comites/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
+        <script>       
+            var URLactual = window.location.href;
+                if (URLactual.includes("edit")){
+//                    alert("str");
+                }
+                else{
+//                    alert("str1");
+var str =URLactual.substring(URLactual.indexOf("new")+4,URLactual.length);
+//alert(str);
+$(function () {
+          document.getElementById("codem").value = str;
+      });}
+	</script>
         
 </html>
