--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadform.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadform.html
@@ -40,72 +40,75 @@
 }
  </style>
      
-    <title>SISADMRH-Crear Empleado</title>
+    <title>SISADMRH-Crear Hijo Con Discapacidad</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
+    <div class="contenedorizq"><label  >pnt_ce13</label>  
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-    <h3 align="center">Crear Contacto</h3>
+            <div class="row text-center">
+                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/discapacidad.jpg}"/>
+            </div>
+    <h3 align="center">Crear Hijo Con Discapacidad</h3>
     
 
-    <div id="menu1" class="tab-pane fade">
+    
         <br>
-      <form class="form-horizontal" th:object="${contacto}" th:action="@{../contacto}" method="post">
-          <input type="hidden" th:field="*{codigocontacto}"/>
-            <input type="hidden" th:field="*{nombrecontacto}"/>
+      <form class="form-horizontal" th:object="${hijodiscapacidad}" th:action="@{../hijodiscapacidad}" method="post">
+<!--          <span th:object="${empleadoContacto}"> 
+             <input type="text" th:field="*{codigoempleado}"/>
+          </span>-->
+            <input type="hidden" th:field="*{codigohijodiscapacidad}"/>
+            <input type="hidden" th:field="*{nombrehijodiscapacidad}"/>
             <div class="col-md-12"  align="center">
                  <div class="form-group">
                     <label class="col-sm-3 control-label">Nombre(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{nombrecontacto}"  />
+                        <input type="text" class="form-control"    required="true" size="50" maxlength="50" th:field="*{nombrehijodiscapacidad}"  />
                     </div>
                     </div>
                       <div class="form-group">
                     <label class="col-sm-3 control-label">Apellido(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{apellidocontacto}"   />
+                        <input type="text" class="form-control"    required="true" size="50" maxlength="50" th:field="*{apellidohijodiscapacidad}"   />
                     </div>
                 </div>
                       <div class="form-group">
-                    <label class="col-sm-3 control-label">Direccion(*):</label>
+                    <label class="col-sm-3 control-label">Nombre Discapacidad(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{direccion}"  />
+                        <input type="text" class="form-control"  required="true" size="50" maxlength="50"  th:field="*{nombrediscapacidad}"  />
                     </div>
                 </div>
                      <div class="form-group">
-                <label class="col-sm-3 control-label">Sexo(*):</label>
+                <label class="col-sm-3 control-label">Tipo de Discapacidad(*):</label>
                 <div class="col-sm-5">
-                    <select class="form-control" name="sexocontanto"  >
+                    <select class="form-control" name="tipodiscapacidad"  >
                             <!--th:field="*{sexocontacto}" >-->
-                        <option>Femenino</option>
-                        <option>Masculino</option>
+                        <option>Mental</option>
+                        <option>Fisica</option>
                     </select>
                 </div>
             </div>
                  <div class="form-group">
-                    <label class="col-sm-3 control-label">Telefono Fijo(*):</label>
+                    <label class="col-sm-3 control-label">Fecha de Nacimiento:</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"    th:field="*{telefonofijocontacto}" />
+                          <input class="form-control" type="text"  name="fechasepr" id="fechasepr"  th:field="*{fechanamimientohijosdiscapacidad}"/>
                     </div>
                     </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Telefono Movil(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"    th:field="*{telefonomovilcontacto}"  />
-                    </div>
+                     
                 </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Correo Electronico(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{emailcontacto}"    />
-                    </div>
-                </div>
-                </div>
+                
           <div class="col-md-12">
             <div class="row" align="center">
                 <button type="button" class="btn btn-default"><a href="#" th:href="@{/empleado/}">Regresar</a></button>
@@ -113,9 +116,10 @@
                 <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
     </div>
+            <!--</span>-->
       </form>
         
-      </div>
+      
   
 
                </div>
@@ -128,6 +132,29 @@
         
        
 </body>
+ <script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comites/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
 <script src="../static/css/hydro/js/jquery.js"></script>
 	        
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
