--- a/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicashow.html
+++ b/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicashow.html
@@ -40,82 +40,87 @@
 }
  </style>
      
-    <title>SISADMRH-Crear Empleado</title>
+    <title>SISADMRH-Ubicacion Fisica</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
+      <div class="contenedorizq"><label  >pnt_cem9_2</label>  
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-    <h3 align="center">Crear Contacto</h3>
+            <div class="row text-center">
+                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/ubicacion.jpg}"/>
+            </div>
+    <h3 align="center">Consulta de Datos de Ubicacion Fisica</h3>
     
 
-    <div id="menu1" class="tab-pane fade">
+    
         <br>
-      <form class="form-horizontal" th:object="${contacto}" th:action="@{../contacto}" method="post">
-          <input type="hidden" th:field="*{codigocontacto}"/>
-            <input type="hidden" th:field="*{nombrecontacto}"/>
-            <div class="col-md-12"  align="center">
-                 <div class="form-group">
-                    <label class="col-sm-3 control-label">Nombre(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{nombrecontacto}"  />
-                    </div>
-                    </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Apellido(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{apellidocontacto}"   />
-                    </div>
-                </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Direccion(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{direccion}"  />
-                    </div>
-                </div>
-                     <div class="form-group">
-                <label class="col-sm-3 control-label">Sexo(*):</label>
-                <div class="col-sm-5">
-                    <select class="form-control" name="sexocontanto"  >
-                            <!--th:field="*{sexocontacto}" >-->
-                        <option>Femenino</option>
-                        <option>Masculino</option>
-                    </select>
-                </div>
-            </div>
-                 <div class="form-group">
-                    <label class="col-sm-3 control-label">Telefono Fijo(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"    th:field="*{telefonofijocontacto}" />
-                    </div>
-                    </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Telefono Movil(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"    th:field="*{telefonomovilcontacto}"  />
-                    </div>
-                </div>
-                      <div class="form-group">
-                    <label class="col-sm-3 control-label">Correo Electronico(*):</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control"   th:field="*{emailcontacto}"    />
-                    </div>
-                </div>
-                </div>
-          <div class="col-md-12">
-            <div class="row" align="center">
-                <button type="button" class="btn btn-default"><a href="#" th:href="@{/empleado/}">Regresar</a></button>
-                <button type="submit" class="btn btn-default">Guardar</button>
-                <button type="reset" class="btn btn-default">Limpiar</button>
-            </div>
-    </div>
-      </form>
+       <form class="form-horizontal">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">codigo:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${ubicacionfisica.codigoubicacion}">codigo de Empleado</p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Jefe Inmediato:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${ubicacionfisica.jefeinmediato}">Nombre de Empleado</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Cargo Funcional:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${ubicacionfisica.cargofuncional}">Apellido de Empleado</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Tareas que Desempeña:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${ubicacionfisica.teareadesempenia}">Fecha de Nacimiento</p>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-md-6">
+<!--                        <div class="form-group">
+                            <label class="col-sm-7 control-label">Telefono Fijo:</label>
+                            <div class="col-sm-5">
+                                <p class="form-control-static" th:text="${ubicacionfisica.telefonofijoubicacionfisica}">Telefono Movil de Empleado</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-7 control-label">Telefono Movil:</label>
+                            <div class="col-sm-5">
+                                <p class="form-control-static" th:text="${ubicacionfisica.telefonomovilubicacionfisica}">DUI</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-7 control-label">Email:</label>
+                            <div class="col-sm-5">
+                                <p class="form-control-static" th:text="${ubicacionfisica.emailubicacionfisica}">Email Empleado</p>
+                            </div>
+                        </div>-->
+                    </div> 
+
+
+                </form>
         
-      </div>
+        <div class="col-md-12">
+                    <div class="row" align="center">
+                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/empleados/}">Regresar</a></button>
+
+                    </div>
+                </div>
   
 
                </div>
