--- a/src/main/resources/templates/fragments/otherreports/1misionesexternasreport.html
+++ b/src/main/resources/templates/fragments/otherreports/1misionesexternasreport.html
@@ -5,8 +5,9 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-    <div class="contenedorizq">
+     <div class="contenedorizq">
     <label  class="der">
+        
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
@@ -17,17 +18,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE MISIONES EXTERNAS
-            </h3>
+            <h3 align="center">GENERACION DE REPORTE DE MISIONES EXTERNAS 1</h3>
             <div>
-                <form class="form-horizontal" id="formreport">
+                <form class="form-horizontal" id="formreport" th:object="${empleados}">
 
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo Mision Externa:</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
-                        </div>
-                    </div>
+               
                      <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
@@ -39,7 +34,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                     </div>
                      <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">Generar</a></td>
+                         <td><a class="btn btn-default" id="pdf">Generar</a></td>
+                    </div>
+                    <div class="form-group">    
+                         <td><a class="btn btn-default" id="excel">excel</a></td>
                     </div>
                 </form>
             </div>
@@ -58,10 +56,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         $('#fechafinal').datepicker({
             dateFormat: 'yy-mm-dd'
         });
-        $('#generar').click(function(){
-            $("#formreport").attr('action', '../1misionesexternas/'+ $("#codigo").val().toString());
+        $('#pdf').click(function(){
+            $("#formreport").attr('action', '../1misionesexternas/1')
             $("form#formreport").submit();
             
+        });
+        $('#excel').click(function(){
+            $("#formreport").attr('action', '../misionExt1xls');
+            $("form#formreport").submit();
         });
     });
 </script>
