--- a/src/main/resources/templates/fragments/otherreports/cumpleanierosreport.html
+++ b/src/main/resources/templates/fragments/otherreports/cumpleanierosreport.html
@@ -17,7 +17,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE ABOGADOS
+            <h3 align="center">GENERACION DE CUMPLEANIEROS
             </h3>
             <div>
                 <form class="form-horizontal" id="formreport">
