agregado observaciones victor

--- a/src/main/resources/templates/fragments/rol/rolshow.html
+++ b/src/main/resources/templates/fragments/rol/rolshow.html
@@ -11,7 +11,7 @@
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
     <div class="col-md-9">
-    <h2>Datos de Rol</h2>
+    <h3 align="center">Datos de Rol</h3>
         <div>
             <form class="form-horizontal">
                 
