--- a/src/main/resources/templates/fragments/usuario/usuarioshow.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioshow.html
@@ -11,7 +11,7 @@
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
     <div class="col-md-9">
-<h2>Datos de Usuario</h2>
+<h3 align="center">Datos de Usuario</h3>
         <div>
             <form class="form-horizontal">
                 
