--- a/src/main/resources/templates/fragments/otherreports/motoristasreport.html
+++ b/src/main/resources/templates/fragments/otherreports/motoristasreport.html
@@ -38,7 +38,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                     </div>
                      <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">Generar</a></td>
+                         <td><a class="btn btn-default" id="generar">PDF</a></td>
                     </div>
  <div class="form-group">    
                          <td><a class="btn btn-default" id="excel">excel</a></td>
