--- a/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
+++ b/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
@@ -42,13 +42,13 @@
                     </div>
 
                     <div class="col-md-12">
-                        <div class="row" align="center">
-
-                            <button type="submit" class="btn btn-default">Agregar</button>
+                    <div class="row" align="center">
+                            <button type="button" class="btn btn-info"><a href="#" th:href="@{/usuariosroles/}">Regresar</a></button>
+                            <button type="submit" class="btn btn-primary">Guardar</button>
                             <button type="reset" class="btn btn-default">Limpiar</button>
-
-                        </div>
                     </div>
+</div>
+
                 </form>
             </div>
         </div>
