--- a/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitaciones.html
+++ b/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitaciones.html
@@ -20,7 +20,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
          <div class="row text-center">
                         <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
                     </div>
-        <h3 align="center">Todos los Usuarios</h3>
+        <h3 align="center">Asignaciones de empledo capacitaciones</h3>
     <div th:if="${not #lists.isEmpty(empleadocapacitaciones)}">
         <div class="table-responsive">
   <table class="table">
@@ -28,15 +28,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <tr>
                 <th>Codigo</th>
                 <th>Nombre</th>
-                <!--<th>Contrasena</th>-->
-                <th>Control contra</th>
-                <th>Estado</th>
-                <th>Fecha Ingreso </th>
-                <th>Fecha Caducidad</th>
-                <th>Fecha Baja</th>
-                <th>Acciones</th>
-                <th>  </th>
-                <th>  </th>
+              
+              
                 
             </tr>
             <tr th:each="empleadocapacitacion : ${empleadocapacitaciones}">
@@ -53,4 +46,26 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </div>
     </div>
 </body
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if ([[${msg}]] === 0){
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success",
+            icon: "success"
+    }).then(function() {
+    location.href = '../empleadocapacitaciones/';
+    });
+    }
+     if ([[${msg}]] === 1){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error en el proceso",
+            type: "error",
+            icon: "error"
+    });
+    }
+    });
+</script> 
  </html>
