--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
@@ -36,7 +36,7 @@
                         <label class="col-sm-2 control-label">Nombre Capacitacion:</label>
                         <div class="col-sm-8">
                         <select class="form-control" name="asistenciacapacitacion.codigoasistenciacapacitacion" >
-                                <option th:each="c:${formempleadoasistenciacapacitacion.asistenciaCapacitaciones}" th:value="${c.codigoasistenciacapacitacion}" th:text="${c.codigocapacitacion}"></option>
+                                <option th:each="c:${formempleadoasistenciacapacitacion.asistenciacapacitaciones}" th:value="${c.codigoasistenciacapacitacion}" th:text="${c.codigocapacitacion.nombrecapacitacion}"></option>
                         </select>
                         </div>
                     </div>
